service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
   beta.cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}'
  name: nginx-1
  labels:
    app: nginx-1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-1
  type: LoadBalancer
